--- a/portfolio.html
+++ b/portfolio.html
@@ -19,9 +19,9 @@
         <div class="d-flex flex-column flex-md-row align-items-center p-0 px-md-4 mb-3 bg-white border-bottom shadow-sm">
             <h5 class="my-0 mr-md-auto font-weight-normal text-white bg-success p-2">Vahe Minasyan</h5>
                 <nav class="my-2 my-md-0 mr-md-3">
-                    <a class="p-2 text-secondary" href="#">About</a>
-                    <a class="p-2 text-secondary" href="#">Portfolio</a>
-                    <a class="p-2 text-secondary" href="#">Contact</a>
+                    <a class="p-2 text-secondary" href="index.html">About</a>
+                    <a class="p-2 text-secondary" href="portfolio.html">Portfolio</a>
+                    <a class="p-2 text-secondary" href="contact.html">Contact</a>
                 </nav>
         </div>
     </head>
@@ -36,25 +36,25 @@
             </div>  
             <div class="row text-secondary">
                 <div class="col-lg-4">
-                    <div class="card m-4" style="width: 18rem;">
+                    <div class="card m-lg-4" style="width: 18rem;">
                         <img class="card-img-top" src="assets/images/g1.jpg" alt="Card image cap">
                             <div class="card-body bg-success text-white text-center"><p class="card-text">Hangman</p></div>
                     </div> 
-                    <div class="card m-4" style="width: 18rem;">
+                    <div class="card m-lg-4" style="width: 18rem;">
                         <img class="card-img-top" src="assets/images/g3.jpg" alt="Card image cap">
                             <div class="card-body bg-success text-white text-center"><p class="card-text">Trivia Game</p></div>
                     </div>     
-                    <div class="card m-4" style="width: 18rem;">
+                    <div class="card m-lg-4" style="width: 18rem;">
                         <img class="card-img-top" src="assets/images/g5.jpg" alt="Card image cap">
                             <div class="card-body bg-success text-white text-center"><p class="card-text">Rock Paper Scissors</p></div>
                     </div> 
                 </div>
                 <div class="col-lg-4">
-                    <div class="card m-4" style="width: 18rem;">
+                    <div class="card m-lg-4" style="width: 18rem;">
                         <img class="card-img-top" src="assets/images/g2.jpg" alt="Card image cap">
                             <div class="card-body bg-success text-white text-center"><p class="card-text">RPG Game</p></div>
                     </div>
-                    <div class="card m-4" style="width: 18rem;">
+                    <div class="card m-lg-4" style="width: 18rem;">
                         <img class="card-img-top" src="assets/images/g4.jpg" alt="Card image cap">
                             <div class="card-body bg-success text-white text-center"><p class="card-text">Rutgers Info Widget</p></div>
                     </div>
