--- a/contact.html
+++ b/contact.html
@@ -14,9 +14,10 @@
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    
-    <head>
-        <div class="d-flex flex-column flex-md-row align-items-center p-0 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+</head>
+
+    <header>
+        <div class="d-flex flex-column flex-md-row align-items-center p-0 px-md-4 mb-3 bg-white border-bottom shadow-sm fixed-top">
             <h5 class="my-0 mr-md-auto font-weight-normal text-white bg-success p-2">Vahe Minasyan</h5>
                 <nav class="my-2 my-md-0 mr-md-3">
                     <a class="p-2 text-secondary" href="index.html">About</a>
@@ -24,10 +25,11 @@
                     <a class="p-2 text-secondary" href="contact.html">Contact</a>
                 </nav>
         </div>
-    </head>
+    </header>
 
     <body id="wrapper">
 
+        <br> <br> 
 
         <div class="container mt-5 mb-5 border bg-white" id="main">
                 <div class="row">
@@ -55,6 +57,8 @@
                         </div>
                     </div>
                 </div>
+                
+        <br> <br> 
 
         <footer class="footer bg-secondary border-top border-success text-center" id="footer">
             <div class="container">
