--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,9 @@
                 <div class="col-lg-4">
                     <div class="card m-lg-4" style="width: 18rem;">
                         <img class="card-img-top" src="assets/images/g2.jpg" alt="Card image cap">
-                            <div class="card-body bg-success text-white text-center"><p class="card-text">RPG Game</p></div>
+                        <div class="card-body bg-success text-white text-center">
+                        <a href="https://vaheminasyan2.github.io/unit-4-game/" class="text-white">Crystals Collector</a>
+                        </div>
                     </div>
                     <div class="card m-lg-4" style="width: 18rem;">
                         <img class="card-img-top" src="assets/images/g4.jpg" alt="Card image cap">
