--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,68 +14,74 @@
     <link href="assets/css/sticky-footer-navbar.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">  
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
 </head>
 
 <header>
-        <div class="d-flex flex-column flex-md-row align-items-center p-0 px-md-4 mb-3 bg-white border-bottom shadow-sm fixed-top">
-            <h5 class="my-0 mr-md-auto font-weight-normal text-white bg-success p-2">Vahe Minasyan</h5>
-                <nav class="my-2 my-md-0 mr-md-3">
-                    <a class="p-2 text-secondary" href="index.html">About</a>
-                    <a class="p-2 text-secondary" href="portfolio.html">Portfolio</a>
-                    <a class="p-2 text-secondary" href="contact.html">Contact</a>
-                </nav>
-        </div>
+    <div class="d-flex flex-column flex-md-row align-items-center p-0 px-md-4 mb-3 bg-white border-bottom shadow-sm fixed-top">
+        <h5 class="my-0 mr-md-auto font-weight-normal text-white bg-success p-2">Vahe Minasyan</h5>
+        <nav class="my-2 my-md-0 mr-md-3">
+            <a class="p-2 text-secondary" href="index.html">About</a>
+            <a class="p-2 text-secondary" href="portfolio.html">Portfolio</a>
+            <a class="p-2 text-secondary" href="contact.html">Contact</a>
+        </nav>
+    </div>
 </header>
 
-    <body id="wrapper">
+<body id="wrapper">
 
-        <br> <br> 
-        
-        <div class="container mt-5 mb-5 border bg-white" id="main">
-            <div class="row">
-                <div class="col">
-                    <h1 class="text-success p-1 border-bottom">Portfolio</h1>
-                </div>
-            </div>  
-            <div class="row text-secondary">
-                <div class="col-lg-4">
-                    <div class="card m-lg-4" style="width: 18rem;">
-                        <img class="card-img-top" src="assets/images/g1.jpg" alt="Card image cap">
-                            <div class="card-body bg-success text-white text-center">
-                                <a href="https://vaheminasyan2.github.io/Word-Guess-Game/" class="text-white">Hangman</a>
-                            </div>
-                    </div> 
-                    <div class="card m-lg-4" style="width: 18rem;">
-                        <img class="card-img-top" src="assets/images/g3.jpg" alt="Card image cap">
-                            <div class="card-body bg-success text-white text-center"><p class="card-text">Trivia Game</p></div>
-                    </div>     
-                    <div class="card m-lg-4" style="width: 18rem;">
-                        <img class="card-img-top" src="assets/images/g5.jpg" alt="Card image cap">
-                            <div class="card-body bg-success text-white text-center"><p class="card-text">Rock Paper Scissors</p></div>
-                    </div> 
-                </div>
-                <div class="col-lg-4">
-                    <div class="card m-lg-4" style="width: 18rem;">
-                        <img class="card-img-top" src="assets/images/g2.jpg" alt="Card image cap">
-                        <div class="card-body bg-success text-white text-center">
-                        <a href="https://vaheminasyan2.github.io/unit-4-game/" class="text-white">Crystals Collector</a>
-                        </div>
-                    </div>
-                    <div class="card m-lg-4" style="width: 18rem;">
-                        <img class="card-img-top" src="assets/images/g4.jpg" alt="Card image cap">
-                            <div class="card-body bg-success text-white text-center"><p class="card-text">Rutgers Info Widget</p></div>
-                    </div>
-                </div>    
+    <br> <br>
+
+    <div class="container mt-5 mb-5 border bg-white" id="main">
+        <div class="row">
+            <div class="col">
+                <h1 class="text-success p-1 border-bottom">Portfolio</h1>
             </div>
         </div>
-
-        <br> <br> 
-
-        <footer class="footer bg-secondary border-top border-success text-center" id="footer">
-            <div class="container">
-                <span class="text-white-50 ">Copyright ©</span>
+        <div class="row text-secondary">
+            <div class="col text-center">
+                <div class="card m-4" style="width: 22rem">
+                    <img class="card-img-top" src="assets/images/g1.jpg" alt="Card image cap">
+                    <div class="card-body bg-success text-white text-center">
+                        <a href="https://vaheminasyan2.github.io/Word-Guess-Game/" class="text-white">Hangman</a>
+                    </div>
+                </div>
+                <div class="card m-4" style="width: 22rem">
+                    <img class="card-img-top" src="assets/images/g3.jpg" alt="Card image cap">
+                    <div class="card-body bg-success text-white text-center">
+                        <a href="https://vaheminasyan2.github.io/TriviaGame/" class="text-white">Trivia Game</a>
+                    </div>
+                </div>
+                <div class="card m-4" style="width: 22rem">
+                    <img class="card-img-top" src="assets/images/g5.jpg" alt="Card image cap">
+                    <div class="card-body bg-success text-white text-center">
+                        <p class="card-text">Rock Paper Scissors</p>
+                    </div>
+                </div>
             </div>
-        </footer>
-    </body>
+            <div class="col text-center">
+                <div class="card m-4" style="width: 22rem">
+                    <img class="card-img-top" src="assets/images/g2.jpg" alt="Card image cap">
+                    <div class="card-body bg-success text-white text-center">
+                        <a href="https://vaheminasyan2.github.io/unit-4-game/" class="text-white">Crystals Collector</a>
+                    </div>
+                </div>
+                <div class="card m-4" style="width: 22rem">
+                    <img class="card-img-top" src="assets/images/g4.jpg" alt="Card image cap">
+                    <div class="card-body bg-success text-white text-center">
+                        <p class="card-text">Rutgers Info Widget</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer class="footer bg-secondary border-top border-success text-center" id="footer">
+        <div class="container">
+            <span class="text-white-50 ">Copyright ©</span>
+        </div>
+    </footer>
+
+</body>
+
 </html>
