added link to Giphy App

--- a/portfolio.html
+++ b/portfolio.html
@@ -70,7 +70,7 @@
                 <div class="card m-4" style="width: 22rem">
                     <img class="card-img-top" src="assets/images/g4.jpg" alt="Card image cap">
                     <div class="card-body bg-success text-white text-center">
-                        <p class="card-text">Rutgers Info Widget</p>
+                        <a href="https://vaheminasyan2.github.io/GiphyApp/" class="text-white">Giphy App</a>
                     </div>
                 </div>
             </div>
