--- a/portfolio.html
+++ b/portfolio.html
@@ -40,34 +40,34 @@
             </div>
         </div>
         <div class="row text-secondary">
-            <div class="col text-center">
-                <div class="card m-4" style="width: 22rem">
+            <div class="col-lg-sm-md mr-5 text-center">
+                <div class="card m-4 lg-sm-md" style="max-width: 18rem">
                     <img class="card-img-top" src="assets/images/g1.jpg" alt="Card image cap">
                     <div class="card-body bg-success text-white text-center">
                         <a href="https://vaheminasyan2.github.io/Word-Guess-Game/" class="text-white">Hangman</a>
                     </div>
                 </div>
-                <div class="card m-4" style="width: 22rem">
+                <div class="card m-4" style="width: 18rem">
                     <img class="card-img-top" src="assets/images/g3.jpg" alt="Card image cap">
                     <div class="card-body bg-success text-white text-center">
                         <a href="https://vaheminasyan2.github.io/TriviaGame/" class="text-white">Trivia Game</a>
                     </div>
                 </div>
-                <div class="card m-4" style="width: 22rem">
+                <div class="card m-4" style="width: 18rem">
                     <img class="card-img-top" src="assets/images/g5.jpg" alt="Card image cap">
                     <div class="card-body bg-success text-white text-center">
                         <p class="card-text">Rock Paper Scissors</p>
                     </div>
                 </div>
             </div>
-            <div class="col text-center">
-                <div class="card m-4" style="width: 22rem">
+            <div class="col-lg-sm-md text-center">
+                <div class="card m-4" style="width: 18rem">
                     <img class="card-img-top" src="assets/images/g2.jpg" alt="Card image cap">
                     <div class="card-body bg-success text-white text-center">
                         <a href="https://vaheminasyan2.github.io/unit-4-game/" class="text-white">Crystals Collector</a>
                     </div>
                 </div>
-                <div class="card m-4" style="width: 22rem">
+                <div class="card m-4" style="width: 18rem">
                     <img class="card-img-top" src="assets/images/g4.jpg" alt="Card image cap">
                     <div class="card-body bg-success text-white text-center">
                         <a href="https://vaheminasyan2.github.io/GiphyApp/" class="text-white">Giphy App</a>
@@ -76,6 +76,7 @@
             </div>
         </div>
     </div>
+    <br><br>
     <footer class="footer bg-secondary border-top border-success text-center" id="footer">
         <div class="container">
             <span class="text-white-50 ">Copyright ©</span>
