--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
                 <div class="card m-4 lg-sm-md" style="max-width: 18rem">
                     <img class="card-img-top" src="assets/images/g1.jpg" alt="Card image cap">
                     <div class="card-body bg-success text-white text-center">
-                        <a href="https://vaheminasyan2.github.io/Word-Guess-Game/" class="text-white">Hangman</a>
+                        <a href="https://vaheminasyan2.github.io/Word-Guess-Game/" class="text-white">Hangman Game</a>
                     </div>
                 </div>
                 <div class="card m-4" style="width: 18rem">
@@ -56,7 +56,7 @@
                 <div class="card m-4" style="width: 18rem">
                     <img class="card-img-top" src="assets/images/g5.jpg" alt="Card image cap">
                     <div class="card-body bg-success text-white text-center">
-                        <p class="card-text">Rock Paper Scissors</p>
+                        <a href="https://vaheminasyan2.github.io/TrainScheduler/" class="text-white">Train Scheduler</a>
                     </div>
                 </div>
             </div>
@@ -64,7 +64,7 @@
                 <div class="card m-4" style="width: 18rem">
                     <img class="card-img-top" src="assets/images/g2.jpg" alt="Card image cap">
                     <div class="card-body bg-success text-white text-center">
-                        <a href="https://vaheminasyan2.github.io/unit-4-game/" class="text-white">Crystals Collector</a>
+                        <a href="https://vaheminasyan2.github.io/unit-4-game/" class="text-white">Crystals Collector Game</a>
                     </div>
                 </div>
                 <div class="card m-4" style="width: 18rem">
