added link to perfect date app and stylied some pages

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
 
 <header>
     <div class="d-flex flex-column flex-md-row align-items-center p-0 px-md-4 mb-3 bg-white border-bottom shadow-sm fixed-top">
-        <h5 class="my-0 mr-md-auto font-weight-normal text-white bg-success p-2">Vahe Minasyan</h5>
+        <h5 class="name my-0 mr-md-auto font-weight-normal text-white bg-success p-2">Vahe Minasyan</h5>
         <nav class="my-2 my-md-0 mr-md-3">
             <a class="p-2 text-secondary" href="index.html">About</a>
             <a class="p-2 text-secondary" href="portfolio.html">Portfolio</a>
@@ -41,36 +41,42 @@
         </div>
         <div class="row text-secondary">
             <div class="col-lg-sm-md mr-5 text-center">
-                <div class="card m-4 lg-sm-md" style="max-width: 18rem">
-                    <img class="card-img-top" src="assets/images/g1.jpg" alt="Card image cap">
+                <div class="card m-4 lg-sm-md" style="width: 18rem">
+                    <img class="card-img-top" src="assets/images/g1.jpeg" alt="Card image cap">
                     <div class="card-body bg-success text-white text-center">
-                        <a href="https://vaheminasyan2.github.io/Word-Guess-Game/" class="text-white">Hangman Game</a>
+                        <a href="https://vaheminasyan2.github.io/Word-Guess-Game/" target="_blank" class="text-white">Word Guess Game</a>
                     </div>
                 </div>
                 <div class="card m-4" style="width: 18rem">
-                    <img class="card-img-top" src="assets/images/g3.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="assets/images/g3.jpeg" alt="Card image cap">
                     <div class="card-body bg-success text-white text-center">
-                        <a href="https://vaheminasyan2.github.io/TriviaGame/" class="text-white">Trivia Game</a>
+                        <a href="https://vaheminasyan2.github.io/TriviaGame/" target="_blank" class="text-white">Trivia Game</a>
                     </div>
                 </div>
                 <div class="card m-4" style="width: 18rem">
-                    <img class="card-img-top" src="assets/images/g5.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="assets/images/g5.jpeg" alt="Card image cap">
                     <div class="card-body bg-success text-white text-center">
-                        <a href="https://vaheminasyan2.github.io/TrainScheduler/" class="text-white">Train Scheduler</a>
+                        <a href="https://vaheminasyan2.github.io/TrainScheduler/" target="_blank" class="text-white">Train Scheduler</a>
                     </div>
                 </div>
             </div>
             <div class="col-lg-sm-md text-center">
                 <div class="card m-4" style="width: 18rem">
-                    <img class="card-img-top" src="assets/images/g2.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="assets/images/g2.jpeg" alt="Card image cap">
                     <div class="card-body bg-success text-white text-center">
-                        <a href="https://vaheminasyan2.github.io/unit-4-game/" class="text-white">Crystals Collector Game</a>
+                        <a href="https://vaheminasyan2.github.io/CrystalsCollectorGame/" target="_blank" class="text-white">Crystals Collector Game</a>
                     </div>
                 </div>
                 <div class="card m-4" style="width: 18rem">
-                    <img class="card-img-top" src="assets/images/g4.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="assets/images/g4.jpeg" alt="Card image cap">
                     <div class="card-body bg-success text-white text-center">
-                        <a href="https://vaheminasyan2.github.io/GiphyApp/" class="text-white">Giphy App</a>
+                        <a href="https://vaheminasyan2.github.io/GiphyApp/" target="_blank" class="text-white">Giphy App</a>
+                    </div>
+                </div>
+                <div class="card m-4" style="width: 18rem">
+                    <img class="card-img-top" src="assets/images/g6.jpeg" alt="Card image cap">
+                    <div class="card-body bg-success text-white text-center">
+                        <a href="https://vaheminasyan2.github.io/Project1/" target="_blank" class="text-white">Perfect Date App</a>
                     </div>
                 </div>
             </div>
@@ -84,5 +90,9 @@
     </footer>
 
 </body>
+
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+    crossorigin="anonymous"></script>
+<script type="text/javascript" src="js/portfolio.js"></script>
 
 </html>
