--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <header>
-    <div class="d-flex flex-column flex-md-row align-items-center p-0 px-md-4 mb-3 bg-white border-bottom shadow-sm fixed-top">
+    <div class="name d-flex flex-column flex-md-row align-items-center p-0 px-md-4 mb-3 bg-white border-bottom shadow-sm fixed-top">
         <h5 class="my-0 mr-md-auto font-weight-normal text-white bg-success p-2">Vahe Minasyan</h5>
             <nav class="my-2 my-md-0 mr-md-3">
                 <a class="p-2 text-secondary" href="index.html">About</a>
@@ -62,4 +62,9 @@
             </div>
         </footer>
     </body>
+
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+    crossorigin="anonymous"></script>
+<script type="text/javascript" src="js/portfolio.js"></script>
+
 </html>
