--- a/portfolio.html
+++ b/portfolio.html
@@ -33,10 +33,10 @@
 
     <br> <br>
 
-    <div class="container mt-5 mb-5 border bg-white" id="main">
+    <div class="container w-75 mt-5 mb-5 border bg-white">
         <div class="row">
             <div class="col">
-                <h1 class="text-success p-1 border-bottom">Portfolio</h1>
+                <h1 class="text-success border-bottom">Portfolio</h1>
             </div>
         </div>
         <div class="row text-secondary">
@@ -76,7 +76,7 @@
                 <div class="card m-4" style="width: 18rem">
                     <img class="card-img-top" src="assets/images/g6.jpeg" alt="Card image cap">
                     <div class="card-body bg-success text-white text-center">
-                        <a href="https://vaheminasyan2.github.io/Project1/" target="_blank" class="text-white">Perfect Date App</a>
+                        <a href="https://vaheminasyan2.github.io/The-Perfect-Date-App/" target="_blank" class="text-white">The Perfect Date App</a>
                     </div>
                 </div>
             </div>
