--- a/contact.html
+++ b/contact.html
@@ -31,10 +31,10 @@
 
         <br> <br> 
 
-        <div class="container mt-5 mb-5 border bg-white" id="main">
+        <div class="container w-75 mt-5 mb-5 border bg-white">
                 <div class="row">
                         <div class="col">
-                            <h1 class="text-success p-1 border-bottom">Contact</h1>
+                            <h1 class="text-success border-bottom">Contact</h1>
                         </div>
                     </div>
                     <div class="row text-secondary">
