--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="google-site-verification" content="UT6HE24FWymm29Us68Fn3p_S4bre4GUseuqw2tTWE8k" />
     <title>About Me</title>
 
     <!-- Bootstrap core CSS -->
