--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 
                 <p>
                     Possesses additional certifications in business analysis and SQL. Experienced in JavaScript, HTML,
-                    CSS, Node.js, and SQL working in agile environments. Successfully executed multiple programs
+                    CSS, Node.js, Heroku, Azure and SQL working in agile environments. Successfully executed multiple
+                    programs
                     ranging from small companies to large corporations. Passionate about solving complex problems and
                     working with cross-functional teams to bridge the gap between business and technology.
                 </p>
@@ -59,6 +60,11 @@
                     Outside of work likes hosting, facilitating, and organizing local young professionals’ meetups.
                     Soccer, swimming, and outdoors enthusiast. Exploring the United States, from the California coast
                     to the Chicago River.
+                </p>
+                <hr>
+                <p>
+                    <a class="text-success" href="https://www.linkedin.com/in/minasyan-vahe/" target="_blank">LinkedIn</a>
+                    | <a class="text-success" href="https://github.com/vaheminasyan2/" target="_blank">GitHub</a>
                 </p>
             </div>
         </div>
