--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,62 +14,64 @@
     <link href="assets/css/sticky-footer-navbar.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
 </head>
 
-    <header>
-        <div class="name d-flex flex-column flex-md-row align-items-center p-0 px-md-4 mb-3 bg-white border-bottom shadow-sm fixed-top">
-            <h5 class="my-0 mr-md-auto font-weight-normal text-white bg-success p-2">Vahe Minasyan</h5>
-                <nav class="my-2 my-md-0 mr-md-3">
-                    <a class="p-2 text-secondary" href="index.html">About</a>
-                    <a class="p-2 text-secondary" href="portfolio.html">Portfolio</a>
-                    <a class="p-2 text-secondary" href="contact.html">Contact</a>
-                </nav>
-        </div>
-    </header>
+<header>
+    <div class="name d-flex flex-column flex-md-row align-items-center p-0 px-md-4 mb-3 bg-white border-bottom shadow-sm fixed-top">
+        <h5 class="my-0 mr-md-auto font-weight-normal text-white bg-success p-2">Vahe Minasyan</h5>
+        <nav class="my-2 my-md-0 mr-md-3">
+            <a class="p-2 text-secondary" href="index.html">About</a>
+            <a class="p-2 text-secondary" href="portfolio.html">Portfolio</a>
+            <a class="p-2 text-secondary" href="contact.html">Contact</a>
+        </nav>
+    </div>
+</header>
 
-    <body id="wrapper">
+<body id="wrapper">
 
-        <br> <br> 
+    <br> <br>
 
-        <div class="container w-75 mt-5 mb-5 border bg-white">
-                <div class="row">
-                        <div class="col">
-                            <h1 class="text-success border-bottom">Contact</h1>
-                        </div>
-                    </div>
-                    <div class="row text-secondary">
-                        <div class="col">
-                            <form>
-                                <div class="form-group">
-                                    <label for="exampleFormControlInput1">Name</label>
-                                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="John Smith">
-                                </div>
-                                <div class="form-group">
-                                    <label for="exampleFormControlInput1">Email</label>
-                                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="example@gmail.com">
-                                </div>
-                                <div class="form-group">
-                                    <label for="exampleFormControlTextarea1">Message</label>
-                                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="4" placeholder="Type your message here"></textarea>
-                                </div>
-                            </form>
-                            <button type="button" class="btn btn-success">Submit</button>
-                            <br><br>
-                        </div>
-                    </div>
-                </div>
-                
-        <br> <br> 
-
-        <footer class="footer bg-secondary border-top border-success text-center" id="footer">
-            <div class="container">
-                <span class="text-white-50 ">Copyright ©</span>
+    <div class="container w-75 mt-5 mb-5 border bg-white">
+        <div class="row">
+            <div class="col">
+                <h1 class="text-success border-bottom">Contact</h1>
             </div>
-        </footer>
-    </body>
+        </div>
+        <div class="row text-secondary">
+            <div class="col">
+                <form>
+                    <div class="form-group">
+                        <label for="exampleFormControlInput1">Name</label>
+                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="John Smith">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleFormControlInput1">Email</label>
+                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="example@gmail.com">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleFormControlTextarea1">Message</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="4" placeholder="Type your message here"></textarea>
+                    </div>
+                </form>
+                <button type="button" class="btn btn-success">Submit</button>
+                <br> <hr>
+                <p class="text-secondary">You can also contact me at vaheminasyan2@gmail.com</p>
+            </div>
+        </div>
+    </div>
 
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+    <br> <br>
+
+    <footer class="footer bg-secondary border-top border-success text-center" id="footer">
+        <div class="container">
+            <span class="text-white-50 ">Copyright ©</span>
+        </div>
+    </footer>
+</body>
+
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
     crossorigin="anonymous"></script>
 <script type="text/javascript" src="js/portfolio.js"></script>
 
