--- a/portfolio.html
+++ b/portfolio.html
@@ -16,6 +16,12 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
 </head>
 
 <header>
@@ -40,47 +46,144 @@
             </div>
         </div>
         <div class="row text-secondary">
+
             <div class="col-lg-sm-md mr-5 text-center">
                 <div class="card m-4 lg-sm-md" style="width: 18rem">
                     <img class="card-img-top" src="assets/images/g1.jpeg" alt="Card image cap">
                     <div class="card-body bg-success text-white text-center">
-                        <a href="https://vaheminasyan2.github.io/Word-Guess-Game/" target="_blank" class="text-white">Word Guess Game</a>
+                        <a class="text-white" data-toggle="collapse" href="#collapseExample1" role="button"
+                            aria-expanded="false" aria-controls="collapseExample1"> Word Guess Game
+                        </a>
+                        <div class="collapse" id="collapseExample1">
+                            <p class="text-white">
+                                Sharpen your knowledge of geography. Reveal country's name by guessing letters.
+                            </p>
+                            <a href="https://vaheminasyan2.github.io/Word-Guess-Game/" target="_blank" role="button"
+                                class="text-white">Demo</a> |
+                            <a href="https://github.com/vaheminasyan2/Word-Guess-Game" target="_blank" role="button"
+                                class="text-white">Repo</a>
+                        </div>
                     </div>
                 </div>
-                <div class="card m-4" style="width: 18rem">
+
+                <div class="card m-4 lg-sm-md" style="width: 18rem">
                     <img class="card-img-top" src="assets/images/g3.jpeg" alt="Card image cap">
                     <div class="card-body bg-success text-white text-center">
-                        <a href="https://vaheminasyan2.github.io/TriviaGame/" target="_blank" class="text-white">Trivia Game</a>
+                        <a class="text-white" data-toggle="collapse" href="#collapseExample2" role="button"
+                            aria-expanded="false" aria-controls="collapseExample2">Trivia Game
+                        </a>
+                        <div class="collapse" id="collapseExample2">
+                            <p class="text-white">
+                                Check your knowledge of geography by answering five simple questions.
+                            </p>
+                            <a href="https://vaheminasyan2.github.io/TriviaGame/" target="_blank" role="button" class="text-white">Demo</a>
+                            |
+                            <a href="https://github.com/vaheminasyan2/TriviaGame" target="_blank" role="button" class="text-white">Repo</a>
+                        </div>
                     </div>
                 </div>
-                <div class="card m-4" style="width: 18rem">
+
+                <div class="card m-4 lg-sm-md" style="width: 18rem">
                     <img class="card-img-top" src="assets/images/g5.jpeg" alt="Card image cap">
                     <div class="card-body bg-success text-white text-center">
-                        <a href="https://vaheminasyan2.github.io/TrainScheduler/" target="_blank" class="text-white">Train Scheduler</a>
+                        <a class="text-white" data-toggle="collapse" href="#collapseExample3" role="button"
+                            aria-expanded="false" aria-controls="collapseExample3">Train Scheduler App
+                        </a>
+                        <div class="collapse" id="collapseExample3">
+                            <p class="text-white">
+                                Train Scheduler is a demo app that allows user to add a train to a schedule.
+                            </p>
+                            <a href="https://vaheminasyan2.github.io/TrainScheduler/" target="_blank" role="button"
+                                class="text-white">Demo</a> |
+                            <a href="https://github.com/vaheminasyan2/TrainScheduler" target="_blank" role="button"
+                                class="text-white">Repo</a>
+                        </div>
                     </div>
                 </div>
             </div>
+
             <div class="col-lg-sm-md text-center">
-                <div class="card m-4" style="width: 18rem">
+                <div class="card m-4 lg-sm-md" style="width: 18rem">
                     <img class="card-img-top" src="assets/images/g2.jpeg" alt="Card image cap">
                     <div class="card-body bg-success text-white text-center">
-                        <a href="https://vaheminasyan2.github.io/CrystalsCollectorGame/" target="_blank" class="text-white">Crystals Collector Game</a>
+                        <a class="text-white" data-toggle="collapse" href="#collapseExample4" role="button"
+                            aria-expanded="false" aria-controls="collapseExample4">Crystals Collector Game
+                        </a>
+                        <div class="collapse" id="collapseExample4">
+                            <p class="text-white">
+                                Check your math skills with Crystals Collector game.
+                            </p>
+                            <a href="https://vaheminasyan2.github.io/CrystalsCollectorGame/" target="_blank" role="button"
+                                class="text-white">Demo</a> |
+                            <a href="https://github.com/vaheminasyan2/CrystalsCollectorGame" target="_blank" role="button"
+                                class="text-white">Repo</a>
+                        </div>
                     </div>
                 </div>
-                <div class="card m-4" style="width: 18rem">
+
+                <div class="card m-4 lg-sm-md" style="width: 18rem">
                     <img class="card-img-top" src="assets/images/g4.jpeg" alt="Card image cap">
                     <div class="card-body bg-success text-white text-center">
-                        <a href="https://vaheminasyan2.github.io/GiphyApp/" target="_blank" class="text-white">Giphy App</a>
+                        <a class="text-white" data-toggle="collapse" href="#collapseExample5" role="button"
+                            aria-expanded="false" aria-controls="collapseExample5">Giphy App
+                        </a>
+                        <div class="collapse" id="collapseExample5">
+                            <p class="text-white">
+                                This app is desinged to show 10 random GIFs on given topic using GIPHY API. Use
+                                this app to find your fav GIF.
+                            </p>
+                            <a href="https://vaheminasyan2.github.io/GiphyApp/" target="_blank" role="button" class="text-white">Demo</a>
+                            |
+                            <a href="https://github.com/vaheminasyan2/GiphyApp" target="_blank" role="button" class="text-white">Repo</a>
+                        </div>
                     </div>
                 </div>
-                <div class="card m-4" style="width: 18rem">
+
+                <div class="card m-4 lg-sm-md" style="width: 18rem">
                     <img class="card-img-top" src="assets/images/g6.jpeg" alt="Card image cap">
                     <div class="card-body bg-success text-white text-center">
-                        <a href="https://vaheminasyan2.github.io/The-Perfect-Date-App/" target="_blank" class="text-white">The Perfect Date App</a>
+                        <a class="text-white" data-toggle="collapse" href="#collapseExample6" role="button"
+                            aria-expanded="false" aria-controls="collapseExample6">The Perfect Date App
+                        </a>
+                        <div class="collapse" id="collapseExample6">
+                            <p class="text-white">
+                                This is a demo app that helps two people to find restuarant and event taking account preferences from both users.
+                            </p>
+                            <a href="https://vaheminasyan2.github.io/The-Perfect-Date-App/" target="_blank" role="button"
+                                class="text-white">Demo</a> |
+                            <a href="https://github.com/vaheminasyan2/The-Perfect-Date-App" target="_blank" role="button"
+                                class="text-white">Repo</a>
+                        </div>
                     </div>
                 </div>
             </div>
+
+            <div class="col-lg-sm-md mr-5 text-center">
+                <div class="card m-4 lg-sm-md" style="width: 18rem">
+                    <img class="card-img-top" src="assets/images/g7.jpg" alt="Card image cap">
+                    <div class="card-body bg-success text-white text-center">
+                        <a class="text-white" data-toggle="collapse" href="#collapseExample7" role="button"
+                            aria-expanded="false" aria-controls="collapseExample">Friend Finder App
+                        </a>
+                        <div class="collapse" id="collapseExample7">
+                            <p class="text-white">
+                                Answer a 10-question survey to find best matching friend.
+                            </p>
+                            <a href="https://nameless-river-63958.herokuapp.com/" target="_blank" role="button" class="text-white">Demo</a>
+                            |
+                            <a href="https://github.com/vaheminasyan2/FriendFinder" target="_blank" role="button" class="text-white">Repo</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
+        <hr>
+        <p>
+            <a class="text-success" href="https://www.linkedin.com/in/minasyan-vahe/" target="_blank">LinkedIn</a>
+            | <a class="text-success" href="https://github.com/vaheminasyan2/" target="_blank">GitHub</a>
+
+        </p>
     </div>
     <br><br>
     <footer class="footer bg-secondary border-top border-success text-center" id="footer">
