updated index page

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="col">
                 <img src="assets/images/profile-photo.JPG" width="185" height="150" alt="profile-photo" class="float-left m-2 mr-3">
                 <p>
-                    Over 5 years of experience in program, project, and product management and analysis. Life-long
+                    Over 5 years of experience in project, program, and product management and analysis. Life-long
                     learner receiving full stack web development certificate from the University of Washington
                     Bootcamp.
                 </p>
@@ -51,7 +51,7 @@
                 <p>
                     Possesses additional certifications in business analysis and SQL. Experienced in JavaScript, HTML,
                     CSS, Node.js, Heroku, Azure and SQL working in agile environments. Successfully executed multiple
-                    programs
+                    projects
                     ranging from small companies to large corporations. Passionate about solving complex problems and
                     working with cross-functional teams to bridge the gap between business and technology.
                 </p>
