--- a/portfolio.html
+++ b/portfolio.html
@@ -25,12 +25,12 @@
 </head>
 
 <header>
-    <div class="d-flex flex-column flex-md-row align-items-center p-0 px-md-4 mb-3 bg-white border-bottom shadow-sm fixed-top">
-        <h5 class="name my-0 mr-md-auto font-weight-normal text-white bg-success p-2">Vahe Minasyan</h5>
+    <div class="d-flex flex-column flex-md-row align-items-center p-0 px-md-4 mb-3 bg-secondary border-bottom border-info shadow-sm fixed-top">
+        <h5 class="name my-0 mr-md-auto font-weight-normal text-white bg-info p-4">Vahe Minasyan</h5>
         <nav class="my-2 my-md-0 mr-md-3">
-            <a class="p-2 text-secondary" href="index.html">About</a>
-            <a class="p-2 text-secondary" href="portfolio.html">Portfolio</a>
-            <a class="p-2 text-secondary" href="contact.html">Contact</a>
+            <a class="p-2 text-white" href="index.html">About</a>
+            <a class="p-2 text-white" href="portfolio.html">Portfolio</a>
+            <a class="p-2 text-white" href="contact.html">Contact</a>
         </nav>
     </div>
 </header>
@@ -39,10 +39,10 @@
 
     <br> <br>
 
-    <div class="container w-75 mt-5 mb-5 border bg-white">
+    <div class="main container w-75 mt-5 mb-5 border bg-light">
         <div class="row">
             <div class="col">
-                <h1 class="text-success border-bottom">Portfolio</h1>
+                <h1 class="text-info border-bottom">Portfolio</h1>
             </div>
         </div>
         <div class="row text-secondary">
@@ -50,8 +50,8 @@
             <div class="col-lg-sm-md mr-5 text-center">
                 <div class="card m-4 lg-sm-md" style="width: 18rem">
                     <img class="card-img-top" src="assets/images/g1.jpeg" alt="Card image cap">
-                    <div class="card-body bg-success text-white text-center">
-                        <a class="text-white" data-toggle="collapse" href="#collapseExample1" role="button"
+                    <div class="card-body bg-info text-white text-center">
+                        <a class="text-white link" data-toggle="collapse" href="#collapseExample1" role="button"
                             aria-expanded="false" aria-controls="collapseExample1"> Word Guess Game
                         </a>
                         <div class="collapse" id="collapseExample1">
@@ -59,34 +59,34 @@
                                 Sharpen your knowledge of geography. Reveal country's name by guessing letters.
                             </p>
                             <a href="https://vaheminasyan2.github.io/Word-Guess-Game/" target="_blank" role="button"
-                                class="text-white">Demo</a> |
+                                class="text-white link">Demo</a> |
                             <a href="https://github.com/vaheminasyan2/Word-Guess-Game" target="_blank" role="button"
-                                class="text-white">Repo</a>
+                                class="text-white link">Repo</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="card m-4 lg-sm-md" style="width: 18rem">
                     <img class="card-img-top" src="assets/images/g3.jpeg" alt="Card image cap">
-                    <div class="card-body bg-success text-white text-center">
-                        <a class="text-white" data-toggle="collapse" href="#collapseExample2" role="button"
+                    <div class="card-body bg-info text-white text-center">
+                        <a class="text-white link" data-toggle="collapse" href="#collapseExample2" role="button"
                             aria-expanded="false" aria-controls="collapseExample2">Trivia Game
                         </a>
                         <div class="collapse" id="collapseExample2">
                             <p class="text-white">
                                 Check your knowledge of geography by answering five simple questions.
                             </p>
-                            <a href="https://vaheminasyan2.github.io/TriviaGame/" target="_blank" role="button" class="text-white">Demo</a>
+                            <a href="https://vaheminasyan2.github.io/TriviaGame/" target="_blank" role="button" class="text-white link">Demo</a>
                             |
-                            <a href="https://github.com/vaheminasyan2/TriviaGame" target="_blank" role="button" class="text-white">Repo</a>
+                            <a href="https://github.com/vaheminasyan2/TriviaGame" target="_blank" role="button" class="text-white link">Repo</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="card m-4 lg-sm-md" style="width: 18rem">
                     <img class="card-img-top" src="assets/images/g5.jpeg" alt="Card image cap">
-                    <div class="card-body bg-success text-white text-center">
-                        <a class="text-white" data-toggle="collapse" href="#collapseExample3" role="button"
+                    <div class="card-body bg-info text-white text-center">
+                        <a class="text-white link" data-toggle="collapse" href="#collapseExample3" role="button"
                             aria-expanded="false" aria-controls="collapseExample3">Train Scheduler App
                         </a>
                         <div class="collapse" id="collapseExample3">
@@ -94,9 +94,9 @@
                                 Train Scheduler is a demo app that allows user to add a train to a schedule.
                             </p>
                             <a href="https://vaheminasyan2.github.io/TrainScheduler/" target="_blank" role="button"
-                                class="text-white">Demo</a> |
+                                class="text-white link">Demo</a> |
                             <a href="https://github.com/vaheminasyan2/TrainScheduler" target="_blank" role="button"
-                                class="text-white">Repo</a>
+                                class="text-white link">Repo</a>
                         </div>
                     </div>
                 </div>
@@ -105,8 +105,8 @@
             <div class="col-lg-sm-md text-center">
                 <div class="card m-4 lg-sm-md" style="width: 18rem">
                     <img class="card-img-top" src="assets/images/g2.jpeg" alt="Card image cap">
-                    <div class="card-body bg-success text-white text-center">
-                        <a class="text-white" data-toggle="collapse" href="#collapseExample4" role="button"
+                    <div class="card-body bg-info text-white text-center">
+                        <a class="text-white link" data-toggle="collapse" href="#collapseExample4" role="button"
                             aria-expanded="false" aria-controls="collapseExample4">Crystals Collector Game
                         </a>
                         <div class="collapse" id="collapseExample4">
@@ -114,17 +114,17 @@
                                 Check your math skills with Crystals Collector game.
                             </p>
                             <a href="https://vaheminasyan2.github.io/CrystalsCollectorGame/" target="_blank" role="button"
-                                class="text-white">Demo</a> |
+                                class="text-white link">Demo</a> |
                             <a href="https://github.com/vaheminasyan2/CrystalsCollectorGame" target="_blank" role="button"
-                                class="text-white">Repo</a>
+                                class="text-white link">Repo</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="card m-4 lg-sm-md" style="width: 18rem">
                     <img class="card-img-top" src="assets/images/g4.jpeg" alt="Card image cap">
-                    <div class="card-body bg-success text-white text-center">
-                        <a class="text-white" data-toggle="collapse" href="#collapseExample5" role="button"
+                    <div class="card-body bg-info text-white text-center">
+                        <a class="text-white link" data-toggle="collapse" href="#collapseExample5" role="button"
                             aria-expanded="false" aria-controls="collapseExample5">Giphy App
                         </a>
                         <div class="collapse" id="collapseExample5">
@@ -132,17 +132,17 @@
                                 This app is desinged to show 10 random GIFs on given topic using GIPHY API. Use
                                 this app to find your fav GIF.
                             </p>
-                            <a href="https://vaheminasyan2.github.io/GiphyApp/" target="_blank" role="button" class="text-white">Demo</a>
+                            <a href="https://vaheminasyan2.github.io/GiphyApp/" target="_blank" role="button" class="text-white link">Demo</a>
                             |
-                            <a href="https://github.com/vaheminasyan2/GiphyApp" target="_blank" role="button" class="text-white">Repo</a>
+                            <a href="https://github.com/vaheminasyan2/GiphyApp" target="_blank" role="button" class="text-white link">Repo</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="card m-4 lg-sm-md" style="width: 18rem">
                     <img class="card-img-top" src="assets/images/g6.jpeg" alt="Card image cap">
-                    <div class="card-body bg-success text-white text-center">
-                        <a class="text-white" data-toggle="collapse" href="#collapseExample6" role="button"
+                    <div class="card-body bg-info text-white text-center">
+                        <a class="text-white link" data-toggle="collapse" href="#collapseExample6" role="button"
                             aria-expanded="false" aria-controls="collapseExample6">The Perfect Date App
                         </a>
                         <div class="collapse" id="collapseExample6">
@@ -150,9 +150,9 @@
                                 This is a demo app that helps two people to find restuarant and event taking account preferences from both users.
                             </p>
                             <a href="https://vaheminasyan2.github.io/The-Perfect-Date-App/" target="_blank" role="button"
-                                class="text-white">Demo</a> |
+                                class="text-white link">Demo</a> |
                             <a href="https://github.com/vaheminasyan2/The-Perfect-Date-App" target="_blank" role="button"
-                                class="text-white">Repo</a>
+                                class="text-white link">Repo</a>
                         </div>
                     </div>
                 </div>
@@ -161,32 +161,50 @@
             <div class="col-lg-sm-md mr-5 text-center">
                 <div class="card m-4 lg-sm-md" style="width: 18rem">
                     <img class="card-img-top" src="assets/images/g7.jpg" alt="Card image cap">
-                    <div class="card-body bg-success text-white text-center">
-                        <a class="text-white" data-toggle="collapse" href="#collapseExample7" role="button"
+                    <div class="card-body bg-info text-white text-center">
+                        <a class="text-white link" data-toggle="collapse" href="#collapseExample7" role="button"
                             aria-expanded="false" aria-controls="collapseExample">Friend Finder App
                         </a>
                         <div class="collapse" id="collapseExample7">
                             <p class="text-white">
                                 Answer a 10-question survey to find best matching friend.
                             </p>
-                            <a href="https://nameless-river-63958.herokuapp.com/" target="_blank" role="button" class="text-white">Demo</a>
+                            <a href="https://nameless-river-63958.herokuapp.com/" target="_blank" role="button" class="text-white link">Demo</a>
                             |
-                            <a href="https://github.com/vaheminasyan2/FriendFinder" target="_blank" role="button" class="text-white">Repo</a>
+                            <a href="https://github.com/vaheminasyan2/FriendFinder" target="_blank" role="button" class="text-white link">Repo</a>
                         </div>
                     </div>
                 </div>
+
+                <div class="card m-4 lg-sm-md" style="width: 18rem">
+                    <img class="card-img-top" src="assets/images/g8.jpeg" alt="Card image cap">
+                    <div class="card-body bg-info text-white text-center">
+                        <a class="text-white link" data-toggle="collapse" href="#collapseExample7" role="button"
+                            aria-expanded="false" aria-controls="collapseExample">Mammoth - A Running App
+                        </a>
+                        <div class="collapse" id="collapseExample7">
+                            <p class="text-white">
+                                Track your running logs, create routes using Google Maps, compare/share your results with others.
+                            </p>
+                            <a href="https://mammoth-app.herokuapp.com/" target="_blank" role="button" class="text-white link">Demo</a>
+                            |
+                            <a href="https://github.com/vaheminasyan2/Mammoths" target="_blank" role="button" class="text-white link">Repo</a>
+                        </div>
+                    </div>
+                </div>
+
             </div>
 
         </div>
         <hr>
         <p>
-            <a class="text-success" href="https://www.linkedin.com/in/minasyan-vahe/" target="_blank">LinkedIn</a>
-            | <a class="text-success" href="https://github.com/vaheminasyan2/" target="_blank">GitHub</a>
+            <a class="text-info" href="https://www.linkedin.com/in/minasyan-vahe/" target="_blank">LinkedIn</a>
+            | <a class="text-info" href="https://github.com/vaheminasyan2/" target="_blank">GitHub</a>
 
         </p>
     </div>
     <br><br>
-    <footer class="footer bg-secondary border-top border-success text-center" id="footer">
+    <footer class="footer bg-secondary border-top border-info text-center" id="footer">
         <div class="container">
             <span class="text-white-50 ">Copyright ©</span>
         </div>
