--- a/index.html
+++ b/index.html
@@ -14,18 +14,19 @@
     <!-- Custom styles for this template -->
     <link href="assets/css/sticky-footer-navbar.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/reset.css">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-        crossorigin="anonymous">
+   
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <header>
-    <div class="name d-flex flex-column flex-md-row align-items-center p-0 px-md-4 mb-3 bg-white border-bottom shadow-sm fixed-top">
-        <h5 class="my-0 mr-md-auto font-weight-normal text-white bg-success p-2">Vahe Minasyan</h5>
+    <div class="d-flex flex-column flex-md-row align-items-center p-0 px-md-4 mb-3 bg-secondary border-bottom border-info shadow-sm fixed-top">
+        <h5 class="name my-0 mr-md-auto font-weight-normal text-white bg-info p-4">Vahe Minasyan</h5>
         <nav class="my-2 my-md-0 mr-md-3">
-            <a class="p-2 text-secondary" href="index.html">About</a>
-            <a class="p-2 text-secondary" href="portfolio.html">Portfolio</a>
-            <a class="p-2 text-secondary" href="contact.html">Contact</a>
+            <a class="p-2 text-white" href="index.html">About</a>
+            <a class="p-2 text-white" href="portfolio.html">Portfolio</a>
+            <a class="p-2 text-white" href="contact.html">Contact</a>
         </nav>
     </div>
 </header>
@@ -33,15 +34,16 @@
 <br> <br>
 
 <body id="wrapper">
-    <div class="main container w-75 mt-5 mb-5 border bg-white">
+    <div class="main container w-75 mt-5 mb-5 border bg-light">
         <div class="row">
             <div class="col">
-                <h1 class="text-success border-bottom">About Me</h1>
+                <h1 class="text-info border-bottom">About Me</h1>
             </div>
         </div>
         <div class="row text-secondary">
             <div class="col">
-                <img src="assets/images/profile-photo.JPG" width="185" height="150" alt="profile-photo" class="float-left m-2 mr-3">
+                <img src="assets/images/profile-photo.JPG" width="185" height="150" alt="profile-photo"
+                    class="float-left m-2 mr-3">
                 <p>
                     Over 5 years of experience in project, program, and product management and analysis. Life-long
                     learner receiving full stack web development certificate from the University of Washington
@@ -63,8 +65,9 @@
                 </p>
                 <hr>
                 <p>
-                    <a class="text-success" href="https://www.linkedin.com/in/minasyan-vahe/" target="_blank">LinkedIn</a>
-                    | <a class="text-success" href="https://github.com/vaheminasyan2/" target="_blank">GitHub</a>
+                    <a class="text-info" href="https://www.linkedin.com/in/minasyan-vahe/"
+                        target="_blank">LinkedIn</a>
+                    | <a class="text-info" href="https://github.com/vaheminasyan2/" target="_blank">GitHub</a>
                 </p>
             </div>
         </div>
@@ -72,15 +75,15 @@
 
     <br> <br>
 
-    <footer class="footer bg-secondary border-top border-success text-center" id="footer">
+    <footer class="footer bg-secondary border-top border-info text-center" id="footer">
         <div class="container">
             <span class="text-white-50 ">Copyright ©</span>
         </div>
     </footer>
 </body>
 
-<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-    crossorigin="anonymous"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"
+    integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
 <script type="text/javascript" src="js/portfolio.js"></script>
 
 </html>
