--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="google-site-verification" content="UT6HE24FWymm29Us68Fn3p_S4bre4GUseuqw2tTWE8k" />
+
+    <link rel="icon" type="image/JPG" href="/assets/images/profile-photo.JPG"/>
+    
     <title>About Me</title>
 
     <!-- Bootstrap core CSS -->
@@ -34,7 +37,7 @@
 <br> <br>
 
 <body id="wrapper">
-    <div class="main container w-75 mt-5 mb-5 border bg-light">
+    <div class="main container w-75 mt-5 mb-5 border border-info bg-light">
         <div class="row">
             <div class="col">
                 <h1 class="text-info border-bottom">About Me</h1>
