--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Portfolio</title>
 
+    <link rel="icon" type="image/JPG" href="/assets/images/profile-photo.JPG"/>
+
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
 
@@ -39,7 +41,7 @@
 
     <br> <br>
 
-    <div class="main container w-75 mt-5 mb-5 border bg-light">
+    <div class="main container w-75 mt-5 mb-5 border border-info bg-light">
         <div class="row">
             <div class="col">
                 <h1 class="text-info border-bottom">Portfolio</h1>
