--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link rel="icon" type="image/JPG" href="/assets/images/profile-photo.JPG"/>
+    
     <title>Contact</title>
 
     <!-- Bootstrap core CSS -->
@@ -33,7 +36,7 @@
 
     <br> <br>
 
-    <div class="main container w-75 mt-5 mb-5 border bg-light">
+    <div class="main container w-75 mt-5 mb-5 border border-info bg-light">
         <div class="row">
             <div class="col">
                 <h1 class="text-info border-bottom">Contact</h1>
